# control_rover

./: README.md  control_motores.py  control_motores.py.bak  er.name  mock_rpi_gpio.py  ps4_control.py  pyproject.toml  requirements.txt  sh usuario@raspberrypi.local
control_rover/: README.md  pyproject.toml  requirements.txt
control_rover/src/: control_motores.py  keyboard_control.py
control_rover/tests/: test_keyboard_control.py
src/: __init__.py  control_motores.py  keyboard_control.py
tests/: test_keyboard_control.py
