[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "control_rover"
version = "0.1.0"
description = "A project for controlling a rover using motor commands and keyboard inputs."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
keywords = ["rover", "control", "keyboard", "GPIO"]

[project.urls]
"Homepage" = "https://github.com/yourusername/control_rover"
"Repository" = "https://github.com/yourusername/control_rover"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]